# Automated-Virtual-E-commerce-Reasoning-Yield

./: .env.example  .gitignore  README.md  alembic.ini  avery_arch.md  docker-compose.yml  mcp_arch.md  pyproject.toml  random_shit.py
src/ai_ecom_ops_brain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/app/: dependencies.py  main.py
src/app/routers/: __init__.py  actions.py  history.py  query.py
src/app/schemas/: actions.py  common.py  history.py  query.py
src/app/services/: __init__.py  action_executor.py  hitl.py  memory.py  orchestrator.py
src/config/: logging.py  settings.py
src/db/: __init__.py  models.py  seed.py  session.py
src/db/fixtures/: campaigns.csv  inventory.csv  orders.csv  products.csv  support_tickets.csv
src/db/migrations/: env.py
src/langgraph/agents/: __init__.py  base_agent.py  data_analyst.py  historian_agent.py  inventory_agent.py  marketing_agent.py  sales_agent.py  support_agent.py
src/langgraph/tools/: __init__.py  exceptions.py  inventory_tools.py  marketing_tools.py  memory_tools.py  registry.py  support_tools.py
src/mcp_server/: config.py  db.py  logging.py  main.py  schemas.py
src/mcp_server/routers/: __init__.py  health.py  invoke.py
src/mcp_server/tools/: action_tools.py  base.py  inventory_tool.py  marketing_tool.py  memory_tool.py  registry.py  sales_tools.py  sql_tool.py  support_tool.py
src/opsbrain_graph/: graph.py  memory.py  state.py  supervisor.py
src/opsbrain_graph/agents/: __init__.py  (+7 more)
src/utils/: __init__.py  embeddings.py  llm.py  observability.py
tests/: manual_llm_check.py
(+9 files in other folders)
