[project]
name = "ai-ecom-ops-brain"
version = "0.1.0"
description = "Agentic AI operations manager for e-commerce stores."
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.1",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "langgraph>=0.0.52",
    "langchain>=0.1.17",
    "langchain-openai>=0.1.7",
    "langsmith>=0.1.50",
    "openai>=1.23.6",
    "sqlalchemy>=2.0.29",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.18",
    "pgvector>=0.3.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
    "ruff>=0.3.4",
    "black>=24.4.0",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"